--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:            Notepad
-description:      "Blogging is fun"
+title:            Zombie Process
+description:      "Game Development"
 logo:             logo3.png
-disqus_shortname: hmfaysal
+disqus_shortname: zombieprocess
 share:            true
 # Change url to your domain. Leave localhost server or blank when working locally.
 # or use the hint from http://jekyllrb.com/docs/github-pages/ to keep this the same 
@@ -10,18 +10,18 @@ share:            true
 
 # Owner/author information
 owner:
-  name:           Your Name
-  avatar:         hmfaysal.jpg
-  email:          you@email.com
+  name:           Owen Pedrotti
+  avatar:         logo3.png
+  email:          owen@zombieprocess.org
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
-  description:    Awesome Dude, Awesome Life
+  description:    Game Developer
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        hmfaysal
-  facebook:       hmfaysal
-  github:         hmfaysal      
-  instagram:      hmfaysal
+  #twitter:        none
+  #facebook:       none
+  github:         owenwp      
+  #instagram:      none
   # For Google Authorship https://plus.google.com/authorship
-  google_plus:    https://plus.google.com/u/0/102602916593522619858
+  #google_plus:    https://plus.google.com/u/0/102602916593522619858
 
 # Analytics and webmaster tools stuff goes here
 google_analytics:   
@@ -32,7 +32,7 @@ bing_verify:
 # Links to include in footer navigation
 # For external links add external: true
 links:
-  - title: Home
+  - title: Blog
     url: /
     external: false
     icon: home
@@ -44,7 +44,7 @@ links:
     url: /hossain-mohd-faysal
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    America/Los_Angeles
 future:      true
 highlighter: pygments
 markdown:    kramdown
@@ -70,8 +70,8 @@ kramdown:
 
 prose:
   rooturl: '_posts'
-  siteurl: 'http://hmfaysal.github.io/'
-  relativeLinks: 'http://hmfaysal.github.io/links.jsonp'
+  siteurl: 'http://owenwp.github.io/'
+  relativeLinks: 'http://owenwp.github.io/links.jsonp'
   media: 'images'
   metadata:
     _posts:
@@ -114,8 +114,8 @@ prose:
           options:
             - name: "Personal"
               value: personal
-            - name: "Engineering"
-              value: engineering
+            - name: "Development"
+              value: development
             - name: "Physics"
               value: physics
             - name: "Psychology"
