--- a/_config.yml
+++ b/_config.yml
@@ -70,8 +70,8 @@ kramdown:
 
 prose:
   rooturl: '_posts'
-  siteurl: 'http://zombieprocessgames.com//'
-  relativeLinks: 'http://zombieprocessgames.com/links.jsonp'
+  siteurl: 'https://zombieprocessgames.com//'
+  relativeLinks: 'https://zombieprocessgames.com/links.jsonp'
   media: 'images'
   metadata:
     _posts:
