--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,10 @@ owner:
   github:         owenwp      
   #instagram:      none
   # For Google Authorship https://plus.google.com/authorship
-  #google_plus:    https://plus.google.com/u/0/102602916593522619858
+  #google_plus:    none
 
 # Analytics and webmaster tools stuff goes here
-google_analytics:   UA-123142315-1
+google_analytics:   
 google_verify:      
 # https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
 bing_verify:         
